tests/Fixtures/Torture/Bad/undef_var.g
// EXPECT G005
kernel { entry func Main() { let int x = y + 1; } }
